--- a/Firmware/Spectacle_LED_Control_Board/Spectacle_LED_Control_Board.cydsn/codegentemp/Spectacle_LED_Control_Board_timing.html
+++ b/Firmware/Spectacle_LED_Control_Board/Spectacle_LED_Control_Board.cydsn/codegentemp/Spectacle_LED_Control_Board_timing.html
@@ -539,7 +539,7 @@ function getElementsByClass(rootNode, elemName, className)
 <tr> <td class="prop"> Project :</td>
 <td class="proptext"> Spectacle_LED_Control_Board</td></tr>
 <tr> <td class="prop"> Build Time :</td>
-<td class="proptext"> 12/08/16 16:37:31</td></tr>
+<td class="proptext"> 02/10/17 09:30:01</td></tr>
 <tr> <td class="prop"> Device :</td>
 <td class="proptext"> CY8C4245AXI-483</td></tr>
 <tr> <td class="prop"> Temperature :</td>
@@ -603,8 +603,8 @@ Clock Summary Section</span>
 <tr> 
  <td class = "text_info">UART_SCBCLK</td>
  <td class = "text_info">CyHFCLK</td>
- <td class = "number">1.371&nbsp;MHz</td>
- <td class = "number">1.371&nbsp;MHz</td>
+ <td class = "number">115.108&nbsp;kHz</td>
+ <td class = "number">115.108&nbsp;kHz</td>
  <td class = "number"> N/A </td>
  <td class = "text_info"> </td>
 </tr>
@@ -659,8 +659,8 @@ Clock Summary Section</span>
 <tr> 
  <td class = "text_info">UART_SCBCLK(FFB)</td>
  <td class = "text_info">UART_SCBCLK(FFB)</td>
- <td class = "number">1.371&nbsp;MHz</td>
- <td class = "number">1.371&nbsp;MHz</td>
+ <td class = "number">115.108&nbsp;kHz</td>
+ <td class = "number">115.108&nbsp;kHz</td>
  <td class = "number"> N/A </td>
  <td class = "text_info"> </td>
 </tr>
