Changes for release to v10

--- a/Firmware/Spectacle_LED_Control_Board/Spectacle_LED_Control_Board.cydsn/Spectacle_LED_Control_Board_timing.html
+++ b/Firmware/Spectacle_LED_Control_Board/Spectacle_LED_Control_Board.cydsn/Spectacle_LED_Control_Board_timing.html
@@ -539,9 +539,9 @@ function getElementsByClass(rootNode, elemName, className)
 <tr> <td class="prop"> Project :</td>
 <td class="proptext"> Spectacle_LED_Control_Board</td></tr>
 <tr> <td class="prop"> Build Time :</td>
-<td class="proptext"> 02/10/17 09:30:01</td></tr>
+<td class="proptext"> 02/16/17 15:54:47</td></tr>
 <tr> <td class="prop"> Device :</td>
-<td class="proptext"> CY8C4245AXI-483</td></tr>
+<td class="proptext"> CY8C4245LQI-483</td></tr>
 <tr> <td class="prop"> Temperature :</td>
 <td class="proptext"> -40C - 85C</td></tr>
 <tr> <td class="prop"> VDDA :</td>
